--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "autoprefixer": "10.4.14",
+    "cookie": "^0.5.0",
     "framer-motion": "^10.12.16",
     "next": "13.4.5",
     "postcss": "8.4.24",
