--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "cookie": "^0.5.0",
     "framer-motion": "^10.12.16",
+    "mongoose": "^7.4.2",
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
